# SuSe

./: CMakeLists.txt  README.md  append_to_report.py  evaluation_script.sh  evaluation_timestamp_generator.py  run_test.sh
efficiency-experiments/CORE/: run_experiment.sh
efficiency-experiments/CORE/susequeries/: CORE_query.txt  query_data.txt  stream_data.txt
efficiency-experiments/CORE/susequeries/descriptions/: CORE_description.txt
efficiency-experiments/CORE/susequeries/streams/: stream_size_1024.txt  stream_size_128.txt  stream_size_16.txt  stream_size_2048.txt  stream_size_256.txt  stream_size_32.txt  stream_size_4.txt  stream_size_4096.txt  stream_size_512.txt  stream_size_64.txt  stream_size_8.txt  stream_size_8192.txt
efficiency-experiments/REmatch/: evaluation_script.sh
efficiency-experiments/SuSe/: evaluation_script_suse.sh  evaluation_timestamp_generator.py  event_stream_generator.py  run_test.sh  summary_selector
real-world_datasets/NASDAQ/: NASDAQ_alphabet_probabilities.txt  README.md  real_world_data_set_stream_generator.py
real-world_datasets/citi_bike/: README.md  citi_bike_alphabet_probabilities.txt  citibike_event_stream_generator.py
reproducibility_submission/: Dockerfile  README.md  progress_watcher.sh  run_all.py  run_repro.sh
reproducibility_submission/docs/reference_output/: README.md
reproducibility_submission/effectiveness/ablation_study/: ablation_plot.py  evaluation_script.sh
reproducibility_submission/effectiveness/ablation_study/present_only/: evaluation_script.sh  event_stream_generator.py  run_test.sh
reproducibility_submission/effectiveness/changing_probability_distribution/: append_to_report.py  evaluation_script.sh  probability_distribution_uni_norm_plot.py
reproducibility_submission/effectiveness/changing_summary_time_window_sizes/: evaluation_script.sh  summary_size_time_window_size_plot.py
reproducibility_submission/effectiveness/recall/total_detected_matches/: append_to_report.py  detected_matches_recall_line_plots.py  evaluation_script.sh  run_test.sh  (+1 more)
reproducibility_submission/efficiency/flink_core_rematch/: run_efficiency_experiments.sh  statesummary_efficiency.py  statesummary_throughputgain.py
reproducibility_submission/efficiency/memory_experiment/: evaluation_script.sh  evaluation_timestamp_generator.py  memory_usage_plot.py  run_test_memory_measured.sh
reproducibility_submission/efficiency/runtime_summary_size_time_window_size/: append_to_report.py  evaluation_script.sh  execution_time_plot.py  latency_boxplot_lineplot.py  throughput_boxplot.py
reproducibility_submission/paper/: comment.cut  references.bib  summarySelector_sigmod25_cameraReady.aux  summarySelector_sigmod25_cameraReady.out  summarySelector_sigmod25_cameraReady.tex
reproducibility_submission/real_world_experiments/NASDAQ/: NASDAQ_plot.py  evaluation_script.sh  latency_lineplot.py  real_world_data_set_stream_generator.py  run_test.sh  throughput_lineplot_real_world.py
reproducibility_submission/real_world_experiments/citi_bike/: citi_bike_plot_two_queries.py  latency_lineplot.py  throughput_lineplot_real_world.py
reproducibility_submission/sensitivity_analysis/changing_number_of_disjunction_operators/: combined_num_disjunction_operators_plot.py  evaluation_script.sh
reproducibility_submission/sensitivity_analysis/changing_number_of_eval_timestamps/: evaluation_script.sh  number_of_evaluation_timestamps_boxplot.py
reproducibility_submission/sensitivity_analysis/changing_number_of_kleene_operators/: evaluation_script.sh  num_kleene_operators_plot.py
reproducibility_submission/sensitivity_analysis/changing_query_length/: evaluation_script.sh  query_length_plot.py
reproducibility_submission/sensitivity_analysis/overlapping_characters/: append_to_report.py  evaluation_script.sh  overlapping_characters_plot.py  run_test.sh
reproducibility_submission/sensitivity_analysis/positional_kleene/: evaluation_script.sh  positional_kleene_plot.py
src/: benchmark_main.cpp  edgelist.cpp  edgelist.hpp  event.hpp  eviction_strategies.hpp  eviction_strategies.tests.cpp  eviction_strategies_impl.hpp  execution_state_counter.bench.cpp  execution_state_counter.hpp  execution_state_counter.tests.cpp  execution_state_counter_impl.hpp  match_enumerator.cpp  nfa.cpp  nfa.hpp  nfa.tests.cpp  regex.cpp  regex.hpp  regex.tests.cpp  regex_compiler.cpp  ring_buffer.hpp  ring_buffer.tests.cpp  ring_buffer_impl.hpp  summary_selector.cpp  summary_selector.hpp  summary_selector.tests.cpp  summary_selector_impl.hpp
(+138 files in other folders)
